--- a/HelloDoc/Views/AdminDash/ViewCase.cshtml
+++ b/HelloDoc/Views/AdminDash/ViewCase.cshtml
@@ -160,7 +160,7 @@
                                 Assign
                             </button>
                         }
-                        <a asp-action="ViewNotes" asp-controller="Admin_Dash" asp-route-id="@Model.requestid">
+                        <a asp-action="ViewNotes" asp-controller="AdminDash" asp-route-id="@Model.requestid">
                             <button  type="button" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
                                 View Notes
                             </button>
