--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -51,11 +51,13 @@
                     @item.Name
                 </td>
                 <td>
-                    <button class="btn border rounded text-white">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
-                        </svg>
-                    </button>
+                    <a href="Mailto:@item.Email">
+                        <button class="btn border rounded text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                            </svg>
+                        </button>
+                    </a>
                 </td>
                 <td class="my-auto"> @item.BirthDate</td>
                 <td class="my-auto"><span>@requestor </span>@item.Requestor</td>
@@ -179,15 +181,16 @@
     @{
         int i = 0;
     }
+
+
     @foreach (var item in Model)
     {
-        @if (item.status == 1)
-        {
+        
             <div class="accordion-item bg-info-subtle">
                 <button class=" accordion-header btn w-100 px-4 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapseTwo">
                     <div class="row w-100 pb-1">
                         <div class="col-8 text-start my-1">
-                            <h5>@item.Name</h5>
+                        <h5>@item.Name</h5>
 
                             <p class="mt-4">@item.Address</p>
                         </div>
@@ -241,11 +244,21 @@
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z" />
                             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0" />
                         </svg>
-                        <span>Wait Time : </span>
+
+                    
+
+                    <span>
+                        Wait Time :<span class="fw-bold"> @item.RequestedDate.ToString("MMM dd, yyyy  hh:mm tt")  </span>
+                    </span>
                     </div>
                 </button>
                 <div id="collapse_@i" class="accordion-collapse collapse border-top border-secondary" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
+                    <div class="accordion-body position-relative">
+                    <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
+                        <button class="btn btn-light position-absolute rounded-4 border-1 border-dark-subtle" style="top: -18px; right: 5px;">
+                            view case
+                        </button>
+                    </a>
                         <h6 class="w-100">
 
                             <button class="btn border-1 rounded-5 border-info pt-0 ">
@@ -283,27 +296,37 @@
                                 </svg>
                             </button>
 
-                            Requestor:
+                        Requestor:@item.Requestor
                         </h6>
 
                         <div class="row gy-2  py-3">
                             <div class="col-6 px-3">
-                                <button class="border-1 btn-success rounded-5 btn w-100 "> Assign Case</button>
+                                <button class="border-1  rounded-5 btn w-100 " style="background-color:indigo;color:white"
+                                    class="dropdown-item" type="button" onclick="togglemodal(this)" data-Req="@item.requestid">
+                                Assign Case
+                            </button>
                             </div>
                             <div class="col-6 px-3">
-                                <button class=" border-1 btn-success px-3 rounded-5 btn w-100"> Cancel Case</button>
+                                <button class="border-1 btn-danger px-3 rounded-5 btn w-100"
+                                    onclick="openModal(this)" data-requestid="@item.requestid" data-name="@item.Name" >
+                                Cancel Case
+                            </button>
 
                             </div>
                             <div class="col-6 px-3">
+                                  <a asp-action="ViewNotes" asp-route-id="@item.requestid">
                                 <button class=" border-1 btn-success px-3 rounded-5 btn w-100"> View Notes</button>
+                                </a>
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"
+                                    onclick="togglemodalblock(this)" data-blockid="@item.requestid" data-blockname="@item.Name">
+                                Block Patient
+                            </button>
 
                             </div>
                             <div class="col-6 px-3">
-                                <button class=" border-1 btn-success px-3 rounded-5 btn w-100"> Block Patient</button>
-
-                            </div>
-                            <div class="col-6 px-3">
-                                <button class="border-1 btn-success px-3 rounded-5 btn w-100"> Email</button>
+                            <a href="Mailto:@item.Email"> <button class="border-1 btn-success px-3 rounded-5 btn w-100"> Email</button></a>
 
                             </div>
                         </div>
@@ -313,11 +336,25 @@
             </div>
             i++;
         }
-    }
+    
 
 </div>
 @* ---------------------------------------------------------- *@
-
+<div>
+    <nav id="pagination" class="mb-5" aria-label="Page navigation ">
+        <ul class="pagination">
+            @for (int b = 1; b <= ViewBag.TotalPages; b++)
+            {
+                @if (ViewBag.TotalPages >= 2)
+                {
+                    <li class="page-item @(b == ViewBag.CurrentPage ? "active" : "")">
+                        <a class="page-link" data-page="@b">@b</a>
+                    </li>
+                }
+            }
+        </ul>
+    </nav>
+</div>
 
 
 
