--- a/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
@@ -58,11 +58,13 @@
                     @item.Name
                 </td>
                 <td>
-                    <button class="btn border rounded text-white">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-                            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
-                        </svg>
-                    </button>
+                    <a href="Mailto:@item.Email">
+                        <button class="btn border rounded text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+                            </svg>
+                        </button>
+                    </a>
                 </td>
                 <td class="my-auto"> @item.BirthDate</td>
                 <td class="my-auto"><span>Patient </span>@item.Requestor</td>
@@ -195,14 +197,15 @@
     </tbody>
 
 </table>
+
+
 <div class="accordion mx-2 pb-3" id="accordionExample">
     @{
         int i = 0;
     }
     @foreach (var item in Model)
     {
-        @if (item.status == 2)
-        {
+        
             <div class="accordion-item bg-info-subtle">
                 <button class=" accordion-header btn w-100 px-4 shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_@i" aria-expanded="false" aria-controls="collapseTwo">
                     <div class="row w-100 pb-1">
@@ -261,11 +264,16 @@
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z" />
                             <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0" />
                         </svg>
-                        <span>Wait Time : </span>
+                    <span> Wait Time :<span class="fw-bold"> @item.RequestedDate.ToString("MMM dd, yyyy  hh:mm tt")  </span> </span>
                     </div>
                 </button>
                 <div id="collapse_@i" class="accordion-collapse collapse border-top border-secondary" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
+                <div class="accordion-body position-relative">
+                    <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
+                        <button class="btn btn-light position-absolute rounded-4 border-1 border-dark-subtle" style="top: -18px; right: 5px;">
+                            view case
+                        </button>
+                    </a>
                         <h6 class="w-100">
 
                             <button class="btn border-1 rounded-5 border-info pt-0 ">
@@ -294,6 +302,32 @@
                             </button>
 
                             Patient: @item.PhoneNumber_P
+                        </h6>   <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                                </svg>
+                            </button>
+
+                           Transfer : Admin
+                        </h6>  
+                        <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                                </svg>
+                            </button>
+
+                            Date Of Service : 23/04/2022
+                        </h6>  
+                        <h6 class="w-100">
+                            <button class="btn border-1 rounded-5 border-info pt-0">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z" />
+                                </svg>
+                            </button>
+
+                            Physician:Physician
                         </h6>
 
                         <h6 class="w-100">
@@ -303,42 +337,83 @@
                                 </svg>
                             </button>
 
-                            Requestor:
+                        Requestor:@item.Requestor
                         </h6>
 
                         <div class="row gy-2  py-3">
                             <div class="col-6 px-3">
-                                <button class="border-1 btn-danger rounded-5 btn w-100 "> Assign Case</button>
+                            <button class="border-1 btn-warning rounded-5 btn w-100 ">
+                                Send Agreement
+                            </button>
                             </div>
                             <div class="col-6 px-3">
-                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> Cancel Case</button>
+                                   <a asp-action="ViewNotes" asp-route-id="@item.requestid">
+                                <button class=" border-1 btn-success px-3 rounded-5 btn w-100"> View Notes</button>
+                                </a>
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class=" border-1 btn-info px-3 rounded-5 btn w-100"
+                                    onclick="transfermodel(this)" data-transferid="@item.requestid">
+                                Transfer
+                            </button>
 
                             </div>
                             <div class="col-6 px-3">
-                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> View Notes</button>
+                                   <a asp-action="ViewUpload" asp-route-id="@item.requestid">
+                                <button class=" border-1 btn-success px-3 rounded-5 btn w-100">View uploads</button>
+                                </a>
+                            </div>
+                            <div class="col-6 px-3">
+                                <button class="border-1 btn-warning px-3 rounded-5 btn w-100"
+                                    onclick="clearmodel(this)" data-clearcaseid="@item.requestid">
+                                Clear Case
+                            </button>
 
                             </div>
                             <div class="col-6 px-3">
-                                <button class=" border-1 btn-danger px-3 rounded-5 btn w-100"> Block Patient</button>
-
-                            </div>
-                            <div class="col-6 px-3">
-                                <button class="border-1 btn-danger px-3 rounded-5 btn w-100"> Email</button>
+                            <a href="Mailto:@item.Email"> <button class="border-1 btn-success px-3 rounded-5 btn w-100"> Email</button></a>
 
                             </div>
                         </div>
-
+                        <div class="d-flex justify-content-end align-items-center">
+                            <h6 class="mt-1">Chat With :</h6>
+                        <button class="btn   border-info rounded text-info mx-2 ">
+                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
+                            </svg>Patient
+                        </button> 
+                        <button class="btn  border-info rounded text-info mx-2">
+                            <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
+                            </svg>Provider
+                        </button>
+                        </div>
                     </div>
                 </div>
             </div>
             i++;
         }
-    }
+    
 
 </div>
 
 
 @* ---------------table---------------------------- *@
+<div>
+    <nav id="pagination" class="mb-5" aria-label="Page navigation ">
+        <ul class="pagination">
+            @for (int b = 1; b <= ViewBag.TotalPages; b++)
+            {
+                @if (ViewBag.TotalPages >= 2)
+                {
+                    <li class="page-item @(b == ViewBag.CurrentPage ? "active" : "")">
+                        <a class="page-link" data-page="@b">@b</a>
+                    </li>
+                }
+            }
+        </ul>
+    </nav>
+</div>
 <script>
     function transfermodel(btn){
         const myModal = document.getElementById("TransferModal");
