--- a/HelloDoc/Views/Home/Index.cshtml
+++ b/HelloDoc/Views/Home/Index.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/css/Patient_site.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    
 </head>
 <body>
     <div class="container-fluid">
@@ -49,7 +51,7 @@
         </div>
 
         <div class="dark-btn">
-            <button class="dark-button float-end border border-3 border-info bg-white  mt-2 mr-2">
+            <button class="btn dark-button border-3 border-info shadow-none mt-2 mr-2" id="theme-toggle">
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="30"
                      height="35"
@@ -61,5 +63,7 @@
             </button>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
