--- a/HelloDoc/Views/Shared/_Layout.cshtml
+++ b/HelloDoc/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" /> 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
                         <img src="../images/doct-logo-2.png" alt="" />
                     </div>
                     <div>
-                        <button class="dark-button float-end border border-info bg-white">
+                        <button class="btn btn-outline-info dark-button float-end border-3 shadow-none border-info bg-white" id="theme-toggle">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="30"
                                  height="35"
@@ -48,6 +49,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
