--- a/HelloDoc/Views/AdminDash/EncounterForm.cshtml
+++ b/HelloDoc/Views/AdminDash/EncounterForm.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model DAL.ViewModel.Encounter
+
+@{
     ViewData["Title"] = "Encounter Form";
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
@@ -27,18 +29,19 @@
         </div>
         <div class="container bg-white p-3">
             <h2 class="text-center fw-bolder my-3 text-info">Medical Report - Confidential</h2>
-            <form method="post" id="encounterForm">
+            <form method="post" id="encounterForm" asp-action="EncounterForm" asp-route-id="@Model.requestid">
                 <input class="d-none" value="0" />
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="first_name" placeholder="First Name">
+                            <input type="text" asp-for="FirstName" class="form-control" id="first_name" placeholder="First Name">
                             <label for="floatingInput">First Name</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="last_name" placeholder="Last Name">
+                            <input type="text" class="form-control" id="last_name" placeholder="Last Name"
+                            asp-for="LastName">
                             <label for="last_name">Last Name</label>
                         </div>
                     </div>
@@ -46,7 +49,8 @@
                 <div class="row gx-2">
                     <div class="col-md-12">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="location" placeholder="Location">
+                            <input type="text" class="form-control" id="location" placeholder="Location"
+                            asp-for="Location" />
                             <label for="location">Location</label>
                         </div>
                     </div>
@@ -56,13 +60,15 @@
                         <div class="form-floating mb-3">
                             <input type="date"
                                    class="form-control"
-                                   id="floatingInput" />
+                                   id="floatingInput"
+                                   asp-for="BirthDate"/>
                             <label for="floatingInput">Date of Birth</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="date" class="form-control" id="last_name" placeholder="Date">
+                            <input type="date" class="form-control" id="last_name" placeholder="Date"
+                            asp-for="ServiceDate">
                             <label for="Date">Date</label>
                         </div>
                     </div>
@@ -70,13 +76,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="historyillness" placeholder="History Of Present Ilness Or Injury">
+                            <input type="text" class="form-control"
+                             asp-for="IllnessOrInjury"  id="historyillness" placeholder="History Of Present Ilness Or Injury">
                             <label for="historyillness">History Of Present Ilness Or Injury</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="medicalhistory" placeholder="Medical History">
+                            <input type="text" class="form-control" id="medicalhistory" placeholder="Medical History"
+                            asp-for="MedicalHistory">
                             <label for="medicalhistory">Medical History</label>
                         </div>
                     </div>
@@ -84,13 +92,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="medications" placeholder="Medications">
+                            <input type="text" class="form-control" id="medications" placeholder="Medications"
+                            asp-for="Medications">
                             <label for="medications">Medications</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="allergies" placeholder="Allergies">
+                            <input type="text" class="form-control" id="allergies" placeholder="Allergies"
+                            asp-for="Allergies">
                             <label for="allergies">Allergies</label>
                         </div>
                     </div>
@@ -98,19 +108,22 @@
                 <div class="row gx-2">
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="temperature" placeholder="Temperature">
+                            <input type="text" class="form-control" id="temperature" placeholder="Temperature"
+                            asp-for="Temprature">
                             <label for="temperature">Temperature</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="hr" placeholder="HR">
+                            <input type="text" class="form-control" id="hr" placeholder="HR"
+                            asp-for="HR">
                             <label for="hr">HR</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type ="text" class="form-control" id="rr" placeholder="RR">
+                            <input type ="text" class="form-control" id="rr" placeholder="RR"
+                            asp-for="RR">
                                 <label for="rr">RR</label>
                         </div>
                     </div>
@@ -118,25 +131,29 @@
                 <div class="row gx-2">
                     <div class="col-md-2">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="bpsystolic" placeholder="Blood Presssure">
+                            <input type="text" class="form-control" id="bpsystolic" placeholder="Blood Presssure"
+                            asp-for="SytolicBp">
                             <label for="bpsystolic">BP (Systolic)</label>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="bpdiastolic" placeholder="Blood Presssure">
+                            <input type="text" class="form-control" id="bpdiastolic" placeholder="Blood Presssure"
+                            asp-for="DistolicBp">
                             <label for="bpdiastolic">BP (Diastolic)</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="oxygen" placeholder="O2">
+                            <input type="text" class="form-control" id="oxygen" placeholder="O2"
+                            asp-for="O2">
                             <label for="oxygen">O2</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="pain" placeholder="Pain">
+                            <input type="text" class="form-control" id="pain" placeholder="Pain"
+                            asp-for="Pain">
                             <label for="pain">Pain</label>
                         </div>
                     </div>
@@ -144,13 +161,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="heent" placeholder="HEENT">
+                            <input type="text" class="form-control" id="heent" placeholder="HEENT"
+                            asp-for="Heent">
                             <label for="heent">HEENT</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="cv" placeholder="CV">
+                            <input type="text" class="form-control" id="cv" placeholder="CV"
+                            asp-for="Cv">
                             <label for="cv">CV</label>
                         </div>
                     </div>
@@ -158,13 +177,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="chest" placeholder="Chest">
+                            <input type="text" class="form-control" id="chest" placeholder="Chest"
+                            asp-for="Chest">
                             <label for="chest">Chest</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="abd" placeholder="ABD">
+                            <input type="text" class="form-control" id="abd" placeholder="ABD"
+                            asp-for="ABD">
                             <label for="abd">ABD</label>
                         </div>
                     </div>
@@ -172,13 +193,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="extr" placeholder="Extr">
+                            <input type="text" class="form-control" id="extr" placeholder="Extr"
+                            asp-for="Extr">
                             <label for="extr">Extr</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="skin" placeholder="Skin">
+                            <input type="text" class="form-control" id="skin" placeholder="Skin"
+                            asp-for="Skin">
                             <label for="skin">Skin</label>
                         </div>
                     </div>
@@ -186,13 +209,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="neuro" placeholder="Neuro">
+                            <input type="text" class="form-control" id="neuro" placeholder="Neuro"
+                            asp-for="Neuro">
                             <label for="neuro">Neuro</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="other" placeholder="Other">
+                            <input type="text" class="form-control" id="other" placeholder="Other"
+                            asp-for="Other">
                             <label for="other">Other</label>
                         </div>
                     </div>
@@ -200,13 +225,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="diagnosis" placeholder="Diagnosis">
+                            <input type="text" class="form-control" id="diagnosis" placeholder="Diagnosis"
+                            asp-for="Dignosis">
                             <label for="diagnosis">Diagnosis</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="treatmentplan" placeholder="Treatment Plan">
+                            <input type="text" class="form-control" id="treatmentplan" placeholder="Treatment Plan"
+                            asp-for="TreatmentPlan">
                             <label for="treatmentplan">Treatment Plan</label>
                         </div>
                     </div>
@@ -214,13 +241,15 @@
                 <div class="row gx-2">
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="medicationsdispensed" placeholder="Medications Dispensed">
+                            <input type="text" class="form-control" id="medicationsdispensed" placeholder="Medications Dispensed"
+                            asp-for="MedicationDispensed">
                             <label for="medicationsdispensed">Medications Dispensed</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="procedures" placeholder="Procedures">
+                            <input type="text" class="form-control" id="procedures" placeholder="Procedures"
+                            asp-for="Procedures">
                             <label for="procedures">Procedures</label>
                         </div>
                     </div>
@@ -228,7 +257,8 @@
                 <div class="row gx-2">
                     <div class="col-md-12">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="followup" placeholder="Followup">
+                            <input type="text" class="form-control" id="followup" placeholder="Followup"
+                            asp-for="Followup">
                             <label for="followup">Followup</label>
                         </div>
                     </div>
@@ -238,7 +268,7 @@
                     <button type="button" class="btn p-2 mx-1" style="background-color:indigo; color:white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                         Finalize
                     </button>
-                    <button class="btn btn-info mx-1" id="savachanges">Save Changes</button>
+                    <button class="btn btn-info mx-1" type="submit" id="savachanges">Save Changes</button>
                 </div>
             </form>
         </div>
