--- a/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
+++ b/HelloDoc/Views/DashBoard/Patient_Dashboard.cshtml
@@ -4,11 +4,11 @@
     var Uniqueid = new HashSet<int?>();
 }
 
-<div class="tab-pane fade show active " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" style="background-color:#E9ECEF">
+<div class="tab-pane fade show active bg-body-secondary " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0" >
 
     <div class="mx-auto pt-5" style="width:95%;">
        <h3>Medical History</h3>
-       <div class="d-flex justify-content-end bg-white">
+       <div class="d-flex justify-content-end white-bag">
             <button type="button" class="btn btn-outline-info mx-3 my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Create New Request</button>
            
 
@@ -40,14 +40,14 @@
        </div>
 
         <table class="table text-center">
-            <thead class="table-secondary">
+            <thead >
                 <tr>
                     <th scope="col">Created Date</th>
                     <th scope="col">Current Status</th>
                     <th scope="col">Documents</th>
                 </tr>
             </thead>
-            <tbody class="bg-white"> 
+            <tbody class="white-bag"> 
                @foreach (var item in Model)
                 {
 
