--- a/HelloDoc/Views/Home/Patient_submit_request.cshtml
+++ b/HelloDoc/Views/Home/Patient_submit_request.cshtml
@@ -9,17 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HelloDoc</title>
 
+    <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/Patient_Submit_request.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
 </head>
 
 <div class="container-fluid">
     <div class="row">
        
         <!-- -----------------buttons--------------- -->
-        <div class="col cl-2">
+        <div class="col">
             <div class="text-center">
                 <div>
                     <h2 class="mt-4 fs-1">I am a...</h2>
@@ -37,10 +38,10 @@
                     </a>
                 </div>
 
-                <div class="d-grid gap-4 mx-auto mt-4">
+                <div class="d-grid gap-4 shadow-none mx-auto mt-4">
                     <a asp-action="patient_Request" asp-controller="Request"
-                       class="btn btn-1 text-start fs-4 pb-4 pt-1 btn-style"
-                       type="button">
+                       class="btn btn-1  text-start fs-4 pb-4 pt-1 btn-style"
+                      >
                         PATIENT
                     </a>
 
