--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Patient_login.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
+  
+    <link rel="stylesheet" href="~/css/Patient_login.css"  asp-append-version="true"/>
 </head>
 <body>
     <div class="container-fluid">
@@ -24,16 +26,19 @@
             </div>
 
             <div class="col col-lg-6 col-sm-12 text-center right-side">
-                <button class="dark-button float-end border border-info bg-white">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="30"
-                         height="35"
-                         fill="currentColor"
-                         class="bi bi-moon text-info m-auto p-2"
-                         viewBox="0 0 16 16">
-                        <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286" />
-                    </svg>
-                </button>
+               
+                    <button class=" dark-button float-end  border-info" id="theme-toggle">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                             width="30"
+                             height="35"
+                             fill="currentColor"
+                             class="bi bi-moon text-info m-auto p-2"
+                             viewBox="0 0 16 16">
+                            <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286" />
+                        </svg>
+                    </button>
+        
+    
 
                 <!-- doct img -->
                 <div class="logo mt-5" >
@@ -63,7 +68,7 @@
                                    placeholder="name@example.com" />
                             <img src="../images/user_circle.svg"
                                  alt=""
-                                 class="pe-3 bg-white" />
+                                 class="pe-3 white-bag" />
                             <label for="floatingInput">Email</label>
                     
                         </div>
@@ -76,7 +81,7 @@
                                    placeholder="Password" />
                             <img src="../images/password_icon.svg"
                                  alt=""
-                                 class="pe-3 bg-white" />
+                                 class="pe-3 white-bag" />
                             <label for="floatingPassword">Password</label>
                         </div>
                             <span asp-validation-for="PasswordHash" class="text-danger  d-block  text-start"></span>
@@ -95,6 +100,8 @@
             </footer>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
 
