--- a/HelloDoc/Views/Request/Business_Request.cshtml
+++ b/HelloDoc/Views/Request/Business_Request.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Business_Request.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -44,9 +45,9 @@
         <div class="row">
         
             <!-- -----------------back button-------------------------- -->
-            <div class="bg-body-secondary" style="background-color:#E9ECEF">
+            <div class="">
                 <div class="d-flex justify-content-end back ">
-                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p" asp-controller="Home">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
@@ -64,8 +65,8 @@
 
             <!-- -----------------form-------------------------- -->
             <form asp-action="Business_Request" asp-controller="Request" method="post">
-            <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3 shadow-lg">
+            <div class="container-fluid">
+                <div class="container  ps-3 shadow-lg">
 
 
                     <h4 class="pt-3 mb-4">Business Information</h4>
@@ -272,7 +273,7 @@
 
 
                     <!-- ------------------------ -->
-                    <div class="row mb-3 pb-3">
+                    <div class="row mb-5 pb-3">
                         <div class="d-grid gap-2 d-flex justify-content-end mt-4">
                             <button class="btn btn-info me-md-2 text-white" type="submit">Submit</button>
                                 <button class="btn btn-outline-info" type="submit">Cancle</button>
@@ -290,6 +291,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Business_Request.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
