--- a/HelloDoc/Views/Request/Family_Friend_Request.cshtml
+++ b/HelloDoc/Views/Request/Family_Friend_Request.cshtml
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Family_Friend_Request.css" />
+    <link rel="stylesheet" href="~/css/Family_Friend_Request.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid ">
         <div class="row">
           
             <!-- -----------------back button-------------------------- -->
-            <div class="bg-body-secondary" style="background-color:#E9ECEF">
+            <div class="" >
                 <div class="d-flex justify-content-end back">
-                    <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
+                    <a asp-action="Patient_submit_request" asp-controller="Home" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
                              width="16"
                              height="16"
@@ -38,12 +39,10 @@
             </div>
 
             <!-- -----------------form-------------------------- -->
-            <form asp-action="Family_Friend_request" asp-controller="Request" method="post">
-            <div class="container-fluid bg-body-secondary" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3 shadow-lg">
-
-
+            <div class="container-fluid ">
+                <div class="container ps-3 shadow-lg ">
                     <h4 class="pt-3 mb-4">Family/Friend Information</h4>
+                <form asp-action="Family_Friend_request" asp-controller="Request" method="post">
 
                     <div class="row">
                         <div class="col col-12 col-sm-6">
@@ -258,24 +257,24 @@
                         </div>
                         @* -------------------------------------------------------------- *@
 
-                    <div class="row mb-3 pb-3">
+                    <div class="row mb-5 pb-3">
                         <div class="d-grid gap-2 d-flex justify-content-end mt-4">
                             <button class="btn btn-info me-md-2 text-white" type="submit">Submit</button>
                             <button class="btn btn-outline-info" type="button">Cancle</button>
+            </form>
                         </div>
                     </div>
                 </div>
             </div>
 
-          
-
-            </form>
+       
             <!-- -----------------form-------------------------- -->
         </div>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/Patient_request.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 </body>
 </html>
