--- a/HelloDoc/Views/Request/Patient_Request.cshtml
+++ b/HelloDoc/Views/Request/Patient_Request.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Patient_Request.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         <div class="row">
 
             <!-- -----------------back button-------------------------- -->
-            <div class="bg-body-secondary" style="background-color:#E9ECEF">
+            <div class="">
                 <div class="d-flex justify-content-end back">
                     <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p" asp-controller="Home"> 
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -41,8 +42,8 @@
 
             <!-- -----------------form-------------------------- -->
 
-            <div class="container-fluid" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3 shadow-lg">
+            <div class="container-fluid ">
+                <div class="container ps-3 shadow-lg ">
                     <h4 class="pt-3 mb-4">Patient Information</h4>
 
                     <form method="post" id="emailForm" enctype="multipart/form-data" asp-controller="Request" asp-action="Patient_Request">
@@ -230,14 +231,14 @@
                             </div>
                         @* -------------------------------------------------------------- *@
 
-                        <div class="row mb-3 pb-3">
+                        <div class="row mb-5 pb-3">
                             <div class="d-grid gap-2 d-flex justify-content-end mt-4">
                                 <button class="btn btn-info me-md-2 text-white" type="submit"  id="submitBtn">Submit</button>
                                 <button class="btn btn-outline-info" type="button">Cancle</button>
+                    </form>
                             </div>
                         </div>
 
-                    </form>
                 </div>
             </div>
         </div>
@@ -286,6 +287,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
