--- a/HelloDoc/wwwroot/css/Family_Friend_Request.css
+++ b/HelloDoc/wwwroot/css/Family_Friend_Request.css
@@ -27,6 +27,13 @@
 .fm {
     padding-top: 0% !important;
 }
+.color {
+    background-color:#E9ECEF;
+}
+
+.white-bag {
+    background-color:#fff;
+}
 
 
 @media only screen and (max-width:567px) {
