--- a/HelloDoc/wwwroot/css/Patient_Request.css
+++ b/HelloDoc/wwwroot/css/Patient_Request.css
@@ -28,6 +28,13 @@
 .fm {
     padding-top: 0% !important;
 }
+.color {
+    background-color:#E9ECEF;
+}
+.white-bag
+{
+    background-color:#fff;
+}
 
 
 
