--- a/HelloDoc/Views/AdminDash/EncounterForm.cshtml
+++ b/HelloDoc/Views/AdminDash/EncounterForm.cshtml
@@ -265,9 +265,11 @@
                 </div>
                 <div class="d-flex flex-row-reverse mb-3">
                     <button class="p-2 btn btn-outline-info mx-1">Cancel</button>
-                    <button type="button" class="btn p-2 mx-1" style="background-color:indigo; color:white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        Finalize
-                    </button>
+                    <a asp-action="Finalize" asp-controller="AdminDash" asp-route-id="@Model.requestid">
+                        <button type="button" class="btn p-2 mx-1" style="background-color:indigo; color:white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Finalize
+                        </button>
+                    </a>
                     <button class="btn btn-info mx-1" type="submit" id="savachanges">Save Changes</button>
                 </div>
             </form>
