--- a/HelloDoc/Views/Shared/_Layout.cshtml
+++ b/HelloDoc/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <div class="row">
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between cl-1 shadow">
@@ -20,7 +20,7 @@
                         <img src="../images/doct-logo-2.png" alt="" />
                     </div>
                     <div>
-                        <button class="btn btn-outline-info dark-button float-end border-3  border-info" id="theme-toggle">
+                        <button class="btn dark-button float-end border-3  border-info" id="theme-toggle">
                             <svg xmlns="http://www.w3.org/2000/svg"
                                  width="30"
                                  height="35"
