--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -14,12 +14,13 @@
         height: 0;
         border-left: 20px solid;
         border-right: 20px solid ;
-        border-top: 20px solid white;
+        border-top: 20px solid ;
         position: absolute;
         bottom:-20px;
         left: 50%;
         transform: translateX(-50%)
     }
+
 </style>
 
 
