--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -340,8 +340,8 @@
 
 </div>
 @* ---------------------------------------------------------- *@
-<div>
-    <nav id="pagination" class="mb-5" aria-label="Page navigation ">
+<div class="d-flex justify-content-center">
+    <nav id="pagination" class="mb-5 " aria-label="Page navigation ">
         <ul class="pagination">
             @for (int b = 1; b <= ViewBag.TotalPages; b++)
             {
