--- a/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/Me.cshtml
@@ -11,9 +11,10 @@
     <title>@ViewData["Title"] - HelloDoc</title>
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Patient_Request.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         <div class="row">
 
             <!-- -----------------back button-------------------------- -->
-            <div class="bg-body-secondary" style="background-color:#E9ECEF">
+            <div class="bg-body-secondary">
                 <div class="d-flex justify-content-end back">
                     <a asp-action="Patient_submit_request" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -41,8 +42,8 @@
 
             <!-- -----------------form-------------------------- -->
 
-            <div class="container-fluid" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3 shadow-lg">
+            <div class="container-fluid bg-body-secondary">
+                <div class="container white-bag ps-3 shadow-lg">
                     <h4 class="pt-3 mb-4">Patient Information</h4>
 
                     <form method="post" id="emailForm" enctype="multipart/form-data" asp-controller="ME_ForSomeOne" asp-action="Me">
@@ -212,7 +213,7 @@
                         <div class="input-group row p-2 mx-auto mt-3" style="height:60px">
                             <div class="d-flex">
                                 <label for="fileUpload" class="col d-flex">
-                                    <div class="col bg-white p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
+                                    <div class="col  p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
                                     <div id="btn" class="p-1 btn btn-info">
 
                                         <i class="bi bi-cloud-arrow-up text-white"></i>
@@ -225,7 +226,7 @@
                         </div>
                         @* -------------------------------------------------------------- *@
 
-                        <div class="row mb-3 pb-3">
+                        <div class="row mb-3 pb-3 mb-5">
                             <div class="d-grid gap-2 d-flex justify-content-end mt-4">
                                 <button class="btn btn-info me-md-2 text-white" type="submit" id="submitBtn">Submit</button>
                                 <button class="btn btn-outline-info" type="button">Cancle</button>
@@ -242,6 +243,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
