--- a/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
+++ b/HelloDoc/Views/ME_ForSomeOne/SomeOne.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Patient_Request.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
         <div class="row">
 
             <!-- -----------------back button-------------------------- -->
-            <div class="bg-body-secondary" style="background-color:#E9ECEF">
+            <div class="bg-body-secondary">
                 <div class="d-flex justify-content-end back">
                     <a asp-action="Index" asp-controller="DashBoard" class="btn btn-outline-info text-center p-2 btn-p">
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -42,8 +43,8 @@
 
             <!-- -----------------form-------------------------- -->
 
-            <div class="container-fluid" style="background-color:#E9ECEF">
-                <div class="container bg-white ps-3 shadow-lg">
+            <div class="container-fluid bg-body-secondary">
+                <div class="container white-bag ps-3 shadow-lg">
                     <h4 class="pt-3 mb-4">Patient Information</h4>
 
                     <form method="post" id="emailForm" enctype="multipart/form-data" >
@@ -235,7 +236,7 @@
                         <div class="input-group row p-2 mx-auto mt-3" style="height:60px">
                             <div class="d-flex">
                                 <label for="fileUpload" class="col d-flex">
-                                    <div class="col bg-white p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
+                                    <div class="col p-1 ps-3 text-muted border"><span id="infoArea">Select File</span></div>
                                     <div id="btn" class="p-1 btn btn-info">
 
                                         <i class="bi bi-cloud-arrow-up text-white"></i>
