--- a/HelloDoc/Views/Request/Concierge_Request.cshtml
+++ b/HelloDoc/Views/Request/Concierge_Request.cshtml
@@ -130,7 +130,7 @@
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
                                 <input type="text"
-                                    asp-for="State"
+                                    asp-for="State_c"
                                        class="form-control"
                                        id="floatingPassword"
                                        placeholder="Password" />
@@ -172,6 +172,7 @@
                                        id="floatingInput"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">First Name</label>
+                                    <span asp-validation-for="FirstName_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                         <div class="col col-12 col-sm-6 mb-3">
@@ -182,6 +183,7 @@
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Last Name</label>
+                                    <span asp-validation-for="LastName_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                     </div>
@@ -192,7 +194,8 @@
                                        class="form-control"
                                        asp-for="BirthDate_P"
                                        id="floatingPassword"
-                                       placeholder="Password" />
+                                           placeholder="Password" max="@DateTime.Now.ToString("yyyy-MM-dd")"
+                                           min="@DateTime.Now.AddYears(-100).ToString("yyyy-MM-dd")" />
                                 <label for="floatingPassword">Date Of Birth</label>
                             </div>
                         </div>
@@ -209,6 +212,7 @@
                                        id="floatingInput"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">Email</label>
+                                    <span asp-validation-for="Email_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                         <div class="col col-sm-6 col-12">
@@ -219,7 +223,8 @@
                                        id="floatingInput"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">Mobile No</label>
-                            </div>
+                                    <span asp-validation-for="PhoneNumber_P" class="text-danger mb-2"></span>
+                                </div>
                         </div>
                     </div>
 
@@ -228,11 +233,13 @@
                     <div class="row">
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
-                                <input type="text"
-                                       class="form-control"
-                                       id="floatingPassword"
-                                       placeholder="Password" />
-                                <label for="floatingPassword">Room #/Suite(optional)</label>
+                                    <select asp-for="State" class="form-select" aria-label="Default select example">
+                                        <option value="0" selected>Open this select menu</option>
+                                        @foreach (var item in Model.regions)
+                                        {
+                                            <option value="@item.RegionId">@item.Name</option>
+                                        }
+                                    </select>
                             </div>
                         </div>
 
