--- a/HelloDoc/Views/Request/Family_Friend_Request.cshtml
+++ b/HelloDoc/Views/Request/Family_Friend_Request.cshtml
@@ -125,7 +125,7 @@
                                        id="floatingInput"
                                        placeholder="name@example.com" />
                                 <label for="floatingInput">First Name</label>
-                                  <span asp-validation-for="FirstName_P" class="text-danger mb-2"></span>
+                                <span asp-validation-for="FirstName_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                         <div class="col col-12 col-sm-6 mb-3">
@@ -136,7 +136,7 @@
                                        id="floatingPassword"
                                        placeholder="Password" />
                                 <label for="floatingPassword">Last Name</label>
-                                    <span asp-validation-for="LastName_P" class="text-danger mb-2"></span>
+                               <span asp-validation-for="LastName_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                     </div>
@@ -147,8 +147,10 @@
                                     asp-for="BirthDate_P"
                                        class="form-control"
                                        id="floatingPassword"
-                                       placeholder="Password" />
+                                           placeholder="Password" max="@DateTime.Now.ToString("yyyy-MM-dd")"
+                                           min="@DateTime.Now.AddYears(-100).ToString("yyyy-MM-dd")" />
                                 <label for="floatingPassword">Date Of Birth</label>
+                                    <span asp-validation-for="BirthDate_P" class="text-danger mb-2"></span>
                             </div>
                         </div>
                     </div>
@@ -206,12 +208,13 @@
                     <div class="row">
                         <div class="col col-sm-6 col-12">
                             <div class="form-floating mb-3">
-                                <input type="text"
-                                    asp-for="State"
-                                       class="form-control"
-                                       id="floatingPassword"
-                                       placeholder="Password" />
-                                <label for="floatingPassword">State</label>
+                                    <select asp-for="State" class="form-select" aria-label="Default select example">
+                                        <option selected>Open this select menu</option>
+                                        @foreach (var item in Model.regions)
+                                        {
+                                            <option value="@item.RegionId">@item.Name</option>
+                                        }
+                                    </select>
                             </div>
                         </div>
                         <div class="col col-sm-6 col-12">
