--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -21,15 +21,15 @@
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
                     
-                    <nav class="navbar d-inline d-sm-none">
+                    <nav class="navbar d-inline d-sm-none mt-3">
                         <div class="container-fluid">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
                         </div>
                     </nav>
-                    <div class="doct-logo">
-                        <img src="~/images/doct-logo-2.png" alt="" style="height:5rem"/>
+                    <div class="doct-logo d-none d-sm-inline">
+                        <img src="~/images/doct-logo-2.png" alt="" style="height:4rem"/>
                     </div>
 
                     <div class=" float-end ">
