--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -21,23 +21,24 @@
         transform: translateX(-50%)
     }
 
+   
 </style>
 
 
    
 
         @* -------------------------------gutters--------------------------------------------- *@
- <div class="row gx-4 gy-4 mt-4 ms-3" style="margin-top:3rem">
+<div class="row gx-4 gy-4 mt-4 ms-3 " style="margin-top:3rem">
             <div class="col-6 col-xl-2 col-md-4 ">
                 <a id="New">
-            <div class="px-2 py-2  border  rounded-4 position-relative status" id="divnew" style="background-color:#e9eaef">
+            <div class="px-2 py-2  border  rounded-4 position-relative status " id="divnew" style="background-color:#e9eaef">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
                         </svg>
                         <h4>new</h4>
                     </div>
-                    <div class="triangle text-white" id="tranew"></div>
+                    <div class="triangle" id="tranew"></div>
                     <h3>@ViewBag.NewCount</h3>
                 </div>
                 </a>
@@ -115,7 +116,7 @@
         </div>
         @* -------------------------------gutters--------------------------------------------- *@
         @* -------------------------------buttons--------------------------------------------- *@
-    <div class="mt-3 mt-md-5 d-sm-flex justify-content-between align-items-center">
+<div class="mt-3 mt-md-5 d-sm-flex justify-content-between align-items-center">
     <div class="ms-4">
         <p class="fs-2 ps-2">Patients<span class="text-primary" id="textspan"></span></p>
     </div>
