--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -22,20 +22,20 @@
     </a>
 </div>
 <div class="container p-sm-3 p-1 my-3  shadow rounded-3">
-    <form class="form-floating" method="post">
+    <form class="form-floating" method="post" asp-action="AccountInformation" asp-controller="AdminDash">
         <div class="row gx-4">
             <h4 class="text-body">Account Information</h4>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
-                   
+                       asp-for="UserName"
                        class="form-control shadow-none"
-                       placeholder="UserName" />
+                       placeholder="UserName"  disabled/>
                 <label for="floatingInput" class="ms-2">UserName</label>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="password"
-                   
+                      asp-for="Password"
                        class="form-control shadow-none"
                        placeholder="Password" />
                 <label for="floatingInput" class="ms-2">Password</label>
@@ -43,18 +43,19 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
-                <select class="form-control py-2" @*asp-for="State"*@ name="SelectedStateId">
-                    <option>Select State</option>
+                <select class="form-control py-2" name="SelectedStateId">
+                    <option selected>Select Status</option>
+                   @*  <option>Select State</option>
                     @foreach (var state in Model.Regions)
                     {
                     <option value="@state.RegionId">@state.Name</option>
-                    }
+                    } *@
                 </select>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
                 <select class="form-control py-2" 
-                    <option>Select Role</option>
+                    <option selected>Select Role</option>
                     @*@foreach (var state in Model.Region)
                     {
                     <option value="@state.RegionId">@state.Name</option>
@@ -62,100 +63,111 @@
                 </select>
             </div>
             <div class="my-3 d-flex justify-content-end">
-                <button class="btn btn-outline-info px-3 py-2">Reset Password</button>
+                <button type="submit" class="btn btn-outline-info px-3 py-2">Reset Password</button>
             </div>
 
+
+            </form>
+</div>
             <h4 class="text-body">Administrator Information</h4>
+        <form method="post" asp-action="AdministratorInformation" asp-controller="AdminDash">
+               <div class="row gx-4">
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
-                   
-                       class="form-control shadow-none"
-                       placeholder="FirstName" />
+                        asp-for="FirstName"
+                   class="form-control shadow-none changable"
+                       placeholder="FirstName"  disabled/>
                 <label for="floatingInput" class="ms-2">FirstName</label>
              </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
-                    
-                       class="form-control shadow-none"
-                       placeholder="LastName" />
-                <label for="floatingInput" class="ms-2">LastName</label>
+                       asp-for="LastName"
+                   class="form-control shadow-none changable"
+                   placeholder="LastName" disabled />
+                <label for="floatingInput" class="ms-2" >LastName</label>
                
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="email"
-                   
-                       class="form-control shadow-none"
-                       placeholder="Email" />
+                         asp-for="Email"
+                   class="form-control shadow-none changable"
+                   placeholder="Email" disabled />
                 <label for="floatingInput" class="ms-2">Email</label>
              
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="text"
-                    
-                       class="form-control shadow-none"
-                       placeholder="Confirmemail" />
+            <input type="email"
+                   asp-for="ConfirmEmail"
+                   class="form-control shadow-none changable"
+                   placeholder="Confirmemail" disabled />
                 <label for="floatingInput" class="ms-2">Confirm Email</label>
              
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="tel"
-                      
-                       class="form-control shadow-none"
-                       placeholder="phone" />
+                      asp-for="PhoneNumAspNetUsers"
+                   class="form-control shadow-none changable"
+                   placeholder="phone" disabled />
                 <label for="floatingInput" class="ms-2">Phone No.</label>
                 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 my-3 ">
-                <input class="form-check-input text-body" type="checkbox" id="box1" />
-                <label class="form-check-label fs-6" for="box1">
-                   Newyork
-                </label>
-                <input class="form-check-input" type="checkbox" id="box2" />
-                <label class="form-check-label" for="box2">
-                  Virginia
-                </label>
-                <input class="form-check-input" type="checkbox" id="box3" />
-                <label class="form-check-label" for="box3">
-                  Maryland
-                </label>
-                <input class="form-check-input" type="checkbox" id="box4" />
-                <label class="form-check-label" for="box4">
-                   alaska
-                </label>
-            </div>
-            <div class="my-3 d-flex justify-content-end">
-                <button class="btn btn-info px-4 py-3">Edit</button>
-            </div>
 
-            <h4 class="text-body">Mailing & Billing Information</h4>
+
+            @foreach (var state in Model.Regions)
+            {
+             
+                <input class="form-check-input text-body" name="states" type="checkbox" id="box1_@state" value="@state.RegionId" />
+                <label class="form-check-label fs-6" for="box1">
+                    @state.Name
+                </label>
+            }
+         
+            </div>
+        <div class="d-flex justify-content-end my-1">
+            <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="EditBtn">
+                Edit
+            </button>
+            <button onclick="toggleSave()" type="submit" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="SaveBtn">
+                Save
+            </button>
+            <button onclick="toggleCancel()" type="button" class="btn border-none bg-danger p-3 text-light fw-semibold me-4" id="CancelBtn">
+                Cancle
+            </button>
+        </div>
+    </form>
+    </div>    
+    <h4 class="text-body">Mailing & Billing Information</h4>
+       <form asp-action="MailingBillingInformation" method="post">
+       <div class="row gx-4">
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="text"
-                   
-                       class="form-control shadow-none"
-                       placeholder="UserName" />
+                       asp-for="Address1"
+                   class="form-control shadow-none changable1"
+                       placeholder="UserName" disabled />
                 <label for="floatingInput" class="ms-2">Address1</label>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="password"
-                  
-                       class="form-control shadow-none"
-                       placeholder="Password" />
+            <input type="text"
+                   asp-for="Address2"
+                   class="form-control shadow-none changable1"
+                   placeholder="Password" disabled />
                 <label for="floatingInput" class="ms-2">Address2</label>
                 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="password"
-                       
-                       class="form-control shadow-none"
-                       placeholder="Password" />
+                <input type="text"
+                       asp-for="City"
+                   class="form-control shadow-none changable1"
+                   placeholder="Password" disabled />
                 <label for="floatingInput" class="ms-2">City</label>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
-                <select class="form-control py-2" name="SelectedStateId">
-                    <option>Select State</option>
+            <select class="form-control py-2 changable1" name="SelectedStateId" asp-for="state" disabled>
+                   
                     @foreach (var state in Model.Regions)
                     {
                     <option value="@state.RegionId">@state.Name</option>
@@ -163,23 +175,105 @@
                 </select>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="password"
-
-                       class="form-control shadow-none"
-                       placeholder="Password" />
+            <input type="text"
+                    asp-for="zip"
+                   class="form-control shadow-none changable1"
+                   placeholder="Password" disabled />
                 <label for="floatingInput" class="ms-2">Zip</label>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="password"
-                     
-                       class="form-control shadow-none"
-                       placeholder="Password" />
+            <input type="text"
+                     asp-for="MobileNumAdmin"
+                   class="form-control shadow-none changable1"
+                   placeholder="Password" disabled />
                 <label for="floatingInput" class="ms-2">Mobile Num</label>
             </div>
-            <div class="my-3 d-flex justify-content-end">
-                <button class="btn btn-info px-4 py-3">Edit</button>
-            </div>
+        <div class="d-flex justify-content-end my-1">
+            <button onclick="toggleEdit1()" type="button" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="EditBtn1">
+                Edit
+            </button>
+            <button onclick="toggleSave1()" type="submit" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="SaveBtn1">
+                Save
+            </button>
+            <button onclick="toggleCancel1()" type="button" class="btn border-none bg-danger p-3 text-light fw-semibold me-4" id="CancelBtn1">
+                Cancle
+            </button>
         </div>
     </form>
+               </div>
+        </div>
 </div>
+
+
+@section scripts {
+    <!-- jQuery script -->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+
+    <script>
+
+        $("#CancelBtn").hide();
+        $("#SaveBtn").hide();
+        function toggleEdit() {
+
+            var inputFields = document.querySelectorAll('.changable');
+
+
+            inputFields.forEach(function (input) {
+                input.disabled = !input.disabled;
+            });
+
+            $("#CancelBtn").show();
+            $("#EditBtn").hide();
+            $("#SaveBtn").show();
+        }
+
+
+        function toggleCancel() {
+            var inputFields = document.querySelectorAll('.changable');
+
+            // Toggle the disabled attribute for each input field
+            inputFields.forEach(function (input) {
+                input.disabled = !input.disabled;
+            });
+
+            $("#EditBtn").show();
+            $("#CancelBtn").hide();
+            $("#SaveBtn").hide();
+        } 
+        
+        $("#CancelBtn1").hide();
+        $("#SaveBtn1").hide();
+
+
+        function toggleEdit1() {
+
+            var inputFields = document.querySelectorAll('.changable1');
+
+
+            inputFields.forEach(function (input) {
+                input.disabled = !input.disabled;
+            });
+
+            $("#CancelBtn1").show();
+            $("#EditBtn1").hide();
+            $("#SaveBtn1").show();
+        }
+
+
+        function toggleCancel1() {
+            var inputFields = document.querySelectorAll('.changable1');
+
+            // Toggle the disabled attribute for each input field
+            inputFields.forEach(function (input) {
+                input.disabled = !input.disabled;
+            });
+
+            $("#EditBtn1").show();
+            $("#CancelBtn1").hide();
+            $("#SaveBtn1").hide();
+        }
+
+    </script>
+}
